# sdk-nrfxlib

./: .checkpatch.conf  .sonarcloud.properties  .vale.ini  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig.nrfxlib  LICENSE  README.md  README.rst  common.cmake  nb.txt
bsdlib/: CHANGELOG.rst  CMakeLists.txt  Kconfig  README.rst  license.txt
bsdlib/doc/: CHANGELOG.rst  api.rst  architecture.rst  at_commands.rst  extensions.rst  gnss_extension.rst  limitations.rst  pdn_extension.rst  security_tags.rst  supported_features.rst  ug_bsdlib_porting_os.rst
bsdlib/doc/images/: bsd_lib.vsdx  security_tags.vsdx
bsdlib/include/: bsd.h  bsd_limits.h  bsd_os.h  bsd_platform.h  nrf_apn_class.h  nrf_errno.h  nrf_inbuilt_key.h  nrf_key_mgmt.h  nrf_socket.h
crypto/: CMakeLists.txt  Kconfig  README.rst  license.txt
crypto/doc/: CHANGELOG_cc310_bl.rst  CHANGELOG_cc3xx_mbedcrypto.rst  CHANGELOG_cc3xx_platform.rst  CHANGELOG_oberon.rst  api.rst  nrf_cc310_bl.rst  nrf_cc310_mbedcrypto.rst  nrf_cc310_platform.rst  nrf_cc3xx_mbedcrypto.rst  nrf_cc3xx_platform.rst  nrf_oberon.rst
crypto/nrf_cc310_bl/: CHANGELOG.rst  license.txt
crypto/nrf_cc310_bl/include/: crys_error.h  nrf_cc310_bl_ecdsa_verify_common.h  nrf_cc310_bl_ecdsa_verify_secp256r1.h  nrf_cc310_bl_hash_common.h  nrf_cc310_bl_hash_sha256.h  ssi_pal_types.h
crypto/nrf_cc310_bl/lib/: license.txt
crypto/nrf_cc310_mbedcrypto/: CHANGELOG.rst  license.txt
crypto/nrf_cc310_mbedcrypto/include/: cc3xx_asn1_util.h  cc3xx_crypto_primitives_sizes.h  cc3xx_ecdh_util.h  cc3xx_psa_asymmetric_encryption.h  cc3xx_psa_asymmetric_signature.h  cc3xx_psa_cipher.h  cc3xx_psa_key_generation.h  cc3xx_psa_mac.h  nrf-config-cc310.h
crypto/nrf_cc310_platform/: CHANGELOG.rst
crypto/nrf_cc310_platform/include/: nrf_cc310_platform.h  nrf_cc310_platform_abort.h  nrf_cc310_platform_defines.h  nrf_cc310_platform_entropy.h  nrf_cc310_platform_mutex.h  nrf_cc3xx_platform.h  nrf_cc3xx_platform_ctr_drbg.h  nrf_cc3xx_platform_defines.h  nrf_cc3xx_platform_derived_key.h  nrf_cc3xx_platform_entropy.h  nrf_cc3xx_platform_hmac_drbg.h  nrf_cc3xx_platform_identity_key.h  nrf_cc3xx_platform_kmu.h  nrf_cc3xx_platform_mutex.h  nrf_cc3xx_platform_sha256.h  nrf_cc3xx_platform_shadow_key.h  threading_alt.h
crypto/nrf_cc310_platform/src/: nrf_cc3xx_platform_abort_zephyr.c  (+3 more)
crypto/nrf_cc312_mbedcrypto/: CHANGELOG.rst  license.txt
crypto/nrf_cc312_platform/: CHANGELOG.rst
crypto/nrf_cc3xx_platform/: abort_zephyr.c
crypto/nrf_oberon/: CHANGELOG.rst  license.txt  nrf_oberon.packsc
lc3/: CHANGELOG.rst  CMakeLists.txt  Kconfig  README.md  README.rst  license.txt
lc3/doc/: api.rst  license.txt  readme.html  readme.md  release_notes.txt
lc3/include/: sw_codec_lc3.h
lc3/src/: sw_codec_lc3.c
mpsl/: CHANGELOG.rst  CMakeLists.txt  Kconfig  LICENSE-ATTRIBUTION.txt  README.rst  api.rst  license.txt  manifest.yaml
mpsl/doc/: api.rst  bluetooth_coex.rst  bluetooth_coex_3w_interface_shared_section.rst  clock.rst  cx.rst  external_mpsl.rst  fem.rst  mpsl.rst  pm.rst  public_mpsl.rst  radio_notification.rst  timeslot.rst  tx_power_control.rst
mpsl/fem/: CMakeLists.txt
mpsl/include/: mpsl.h  mpsl_clock.h  mpsl_coex.h  mpsl_cx_abstract_interface.h  mpsl_dppi.h  mpsl_ecb.h  mpsl_fem_config_common.h  mpsl_fem_config_nrf21540_common.h  mpsl_fem_config_nrf21540_gpio.h  mpsl_fem_config_nrf21540_gpio_spi.h  mpsl_fem_config_simple_gpio.h  mpsl_fem_init.h  mpsl_fem_power_model.h  mpsl_fem_protocol_api.h  mpsl_fem_types.h  mpsl_hwres.h  mpsl_hwres_ppi.h  mpsl_hwres_zephyr.h  mpsl_pm.h  mpsl_pm_config.h  mpsl_radio_notification.h  mpsl_temp.h  mpsl_timeslot.h  mpsl_tx_power.h  nrf_errno.h
nrf_802154/driver/: CMakeLists.txt
nrf_802154/serialization/: CMakeLists.txt
nrf_802154/sl/: CMakeLists.txt
nrf_fuel_gauge/: CHANGELOG.rst  CMakeLists.txt  Kconfig  README.rst  license.txt
nrf_fuel_gauge/doc/: api.rst
nrf_fuel_gauge/include/: nrf_fuel_gauge.h
nrf_security/: CHANGELOG.rst  CMakeLists.txt  Kconfig  Kconfig.legacy  Kconfig.psa  Kconfig.tls  README.rst
nrf_security/cmake/: archive_folder.cmake  combine_archives.cmake  combine_archives_script.cmake  config_to_tf-m.cmake  extensions.cmake  kconfig_mbedtls_configure.cmake  kconfig_psa_configure.cmake  legacy_crypto_config.cmake  libraries_extract.cmake  nrf_glue_library.cmake  nrf_security_debug.cmake  psa_crypto_config.cmake  symbol_rename.cmake  symbol_rename_archive_script.cmake  symbol_rename_script.cmake  symbol_strip.cmake
nrf_security/configs/: legacy_crypto_config.h.template  nrf-config-thread.h.template  nrf-config.h  nrf-config.h.template  psa_crypto_config.h.template
nrf_security/doc/: adv_backend_config.rst  api.rst  backend_config.rst  backends.rst  configuration.rst  different_tfm_config.rst  driver_config.rst  drivers.rst  glue_layer.rst  mbed_tls_header.rst  nrf_security.rst  prerequisites.rst
nrf_security/mbedtls/: CMakeLists.txt
nrf_security/src/: CMakeLists.txt  debug_init.c  psa_crypto_driver_wrappers.c  random_ext.c
nrf_security/sst_settings/: CMakeLists.txt  Kconfig  sst_settings.c  sst_settings.h
nrf_security/tfm/: CMakeLists.txt
nrf_wifi/: CMakeLists.txt  Kconfig  README.rst
nrf_wifi/doc/: api.rst  layers.rst  low_api_radio_test.rst  low_api_wifi.rst
zboss/: CHANGELOG.rst  CMakeLists.txt  Kconfig  README.rst  license.txt
zboss/development/: CMakeLists.txt  Kconfig
zboss/doc/: zboss_certification.rst  zboss_configuration.rst
zboss/include/: zb_address.h  zb_channel_page.h  zb_config.h  zb_config_common.h  zb_debug.h  zb_errors.h  zb_ha.h  zb_led_button.h  zb_list_macros.h  zb_mem_config_common.h  zb_mem_config_context.h  zb_mem_config_max.h  zb_mem_config_med.h  zb_mem_config_min.h  zb_ncp.h  zb_osif.h  zb_pooled_list.h  zb_ringbuffer.h  zb_trace.h  zb_types.h  zb_version.h  zboss_api.h  zboss_api_af.h  zboss_api_aps.h  zboss_api_aps_interpan.h  zboss_api_buf.h  zboss_api_core.h  zboss_api_internal.h  zboss_api_nwk.h  zboss_api_zcl.h  zboss_api_zdo.h  zboss_api_zgp.h
zboss/production/: CMakeLists.txt  Kconfig
zboss/src/: CMakeLists.txt
(+2314 files in other folders)
